--- a/Yang.html
+++ b/Yang.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<!-- saved from url=(0051)http://urcsc174.org/assignment02/Medellin/jimmy.php -->
+<!-- saved from url=http://urcsc174.org/assignment02/Medellin/jimmy.php -->
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,29 +10,42 @@
 
 </head>
 
+<body><!-- put idea of how it might look in ideas folder -->
 
-	<figure><img src="images/jimmy.jpg" alt="jimmy"> </figure>
+	<div class="container">
+		
+	<div class="left">
 	
+		<figure><img src="images/jimmy.jpg" alt="jimmy"></figure>
+		
+		<nav class="menu">
+		<!-- Current: different colored arrow -->
+		<ul>
+			<li><a href="Aziz.html">Zubair Aziz</a></li>
+			<li><a href="Ostriker.html">Oliver Ostriker</a></li>
+			<li><a href="Yang.html">Jimmy Yang</a></li>
+		</ul>
+		</nav>
+	</div>
+	
+	<div class="right">
+		
+		<h1>Jimmy Yang</h1>
+		
+		<p>Hello! My name is Jimmy Yang. I am a sophomore and I am double majoring in Economics and Global Perspectives History. I am from a quaint small town called Fargo, ND.</p>
 
-		<h2>About Me</h2>
+		<h2>Experience</h2>
+		<p>Currently, I am a Student Aide at the University of Rochester. I patrol sectors and act as the eyes and ears of Public Safety, so to say. In the past, I've worked as a technical assistant at the University of Rochester Medical Center. In that position I looked at records and organized them, as well as uploading them to the internet. After that, I worked as a Volume Licensing Support Specialist for Arvato Digital Services LLC, which was a third-party vendor for Microsoft. I processed orders and made sure that the information was correct. Unfortunately for you, the curious viewer, these jobs are very confidential and I cannot reveal much information.</p>
 
-			<h3>Introduction</h3>
-				<p>Hello! My name is Jimmy Yang. I am a sophomore and I am double majoring in Economics and Global Perspectives History. I am from a quaint small town called Fargo, ND.</p>
+		<p>When I enrolled at the University of Rochester, I had planned to pursue a Financial Economics major. I have decided to change course recently and do a double major in Economics and Global Perspectives History. I've taken courses on Calculus II, the Vikings, Microeconomics, Macroeconomics, Environmental Economics, Statistics, Python, HTML, and Russian politics. This semester, I'm taking Econometrics, which is a class that covers the basic tools of estimation, inference and forecast of cross-section, time-series and panel data models. I'm also taking a course called Hitler's Germany, which analyzes the events and causes that led to the rise of Hitler and the Nazis. I'm also taking a course on Colonial Latin America, which analyzes the society and culture of Colonial Latin America, and how numerous factors in pre-Columbian America, Europe, and Africa led to the society that existed in Colonial Latin America. And of course, I'm taking this class.</p>
 
-			<h3>Work Experience</h3>
-				<p>Currently, I am a Student Aide at the University of Rochester. I patrol sectors and act as the eyes and ears of Public Safety, so to say. In the past, I've worked as a technical assistant at the University of Rochester Medical Center. In that position I looked at records and organized them, as well as uploading them to the internet. After that, I worked as a Volume Licensing Support Specialist for Arvato Digital Services LLC, which was a third-party vendor for Microsoft. I processed orders and made sure that the information was correct. Unfortunately for you, the curious viewer, these jobs are very confidential and I cannot reveal much information.</p>
+		<h2>Miscellaneous</h2>
+		<p>I am a brother of Beta Theta Pi, and was the only member of the Fall 2017 Pledge Class. I am currently on its community-programming committee. I am a founding member of Beatbox Collective, a new club on the U of R dedicated to beatboxing. I also like to travel, meditate, watch online TV shows, and play video games. My favorite TV shows are Narcos, the Crown, the Americans, and Silicon Valley.</p>
 
-			<h3>Course Work</h3>
-				<p>When I enrolled at the University of Rochester, I had planned to pursue a Financial Economics major. I have decided to change course recently and do a double major in Economics and Global Perspectives History. I've taken courses on Calculus II, the Vikings, Microeconomics, Macroeconomics, Environmental Economics, Statistics, Python, HTML, and Russian politics. This semester, I'm taking Econometrics, which is a class that covers the basic tools of estimation, inference and forecast of cross-section, time-series and panel data models. I'm also taking a course called Hitler's Germany, which analyzes the events and causes that led to the rise of Hitler and the Nazis. I'm also taking a course on Colonial Latin America, which analyzes the society and culture of Colonial Latin America, and how numerous factors in pre-Columbian America, Europe, and Africa led to the society that existed in Colonial Latin America. And of course, I'm taking this class.</p>
-
-			<h3>Hobbies and Interests</h3>
-				<p>I am a brother of Beta Theta Pi, and was the only member of the Fall 2017 Pledge Class. I am currently on its community-programming committee. I am a founding member of Beatbox Collective, a new club on the U of R dedicated to beatboxing. I also like to travel, meditate, watch online TV shows, and play video games. My favorite TV shows are Narcos, the Crown, the Americans, and Silicon Valley.</p>
-
-			<h3>Hometown Info</h3>
-				<p>Although my family and I have moved around a lot in our lives, I currently consider my hometown to be Fargo, North Dakota. It's located in Cass County along the Minnesota/North Dakota border, right on the west bank of the Red River of the North. It is about a four hour drive from Minneapolis, Minnesota. According to the 2016 Census, Fargo had a population of 120,762. The city was founded in 1871. Its current mayor is Tim Mahoney.</p>
-
-			<h3>Initial Role</h3>
-				<p>My initial role was to be an information architect because I believe I'm suited for that kind of role. I am good at organization and I am good at leading a team. In my current and past work experience, organization is critical to be able to keep track of all the data that's being processed. I believe I am good at leading a team, as I have done so many times in my professional as well as academic career. For me, good organization and effective leadership are critical for the success of any project.</p>
+		<p>Although my family and I have moved around a lot in our lives, I currently consider my hometown to be Fargo, North Dakota. It's located in Cass County along the Minnesota/North Dakota border, right on the west bank of the Red River of the North. It is about a four hour drive from Minneapolis, Minnesota. According to the 2016 Census, Fargo had a population of 120,762. The city was founded in 1871. Its current mayor is Tim Mahoney.</p>
+	
+	</div>		
+	</div>
 	
 	
 </body>
