--- a/Aziz.html
+++ b/Aziz.html
@@ -5,48 +5,65 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 	<title>Assignment 03</title>
-
+	<link rel="stylesheet" type ="text/css" href="css/override.css">
+  <link rel="stylesheet" href="css/bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+	<script src="css/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body><!-- put idea of how it might look in ideas folder -->
+	<nav class="navbar navbar-inverse  navbar-fixed-top">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" aria-controls="bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="mainPage.html">Economics</a>
+	    </div>
+
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li class="active"><a href="Aziz.html">Zubair Aziz<span class="sr-only">(current)</span></a></li>
+	        <li><a href="Ostriker.html">Oliver Ostriker</a></li>
+					<li><a href="Yang.html">Jimmy Yang</a></li>
+	      </ul>
+			</div>
+		</div>
+	</nav>
 
 	<div class="container">
-	
-	<div class="left">
-	
-		<figure><img src="images/zubair.jpg" alt="zubair"></figure>
-		
-		<nav class="menu">
-		<!-- Current: different colored arrow -->
-		<ul>
-			<li><a href="Aziz.html">Zubair Aziz</a></li>
-			<li><a href="Ostriker.html">Oliver Ostriker</a></li>
-			<li><a href="Yang.html">Jimmy Yang</a></li>
-		</ul>
-		</nav>
-	</div>
-	
-	<div class="right">
-	
-		<h1>Zubair Aziz</h1>
-		
-		<p>I am currently a junior, anticipated to graduate in May, 2019. I started off my first year in college majoring in Economics. I had the privilege to enroll in some interesting courses in the department, such as Sports Economics, where we tested out various economic theories in a sports setting, and Econometrics where students are taught how to use the tools that enable us to extract useful information about important economic policy from a set of available data.</p>
-		<p>I also decided to major in Computer Science after taking a few computer science courses that seemed interesting to me. Because of this, towards the end of my college “career”, I’m taking mostly CS courses. However, this semester in particular will be very interesting as I’m also enrolled in a dance class and an art class. I'm excited for this chance to branch out and obtain new experiences before I graduate.</p>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="left">
+					<figure><img src="images/zubair.jpg" alt="zubair"></figure>
+				</div>
+			</div>
+			<div class="col-md-8">
+				<div class="right">
+					<h1>Zubair Aziz</h1>
 
-		<h2>Experience</h2>
-		<p>I currently work for IT Services on campus, working as an IT Consultant. Here, I assist with network registration and troubleshoot network issues, troubleshoot NetID and login issues, provide support through various methods,assist with various types of malware on students' personal computers. I’d say that the most interesting experience while working here are the night-owl shifts, where I work at the help desk, doing the exact same thing an IT Consultant would normally do, except at the late hours of midnight to 8 am.</p>
-		
-		<p>Other than that, last summer I had the chance to work for Media Prima Digital, a multimedia company based in Malaysia. There, I was an intern working as a developer that worked on web & app development. Here, I worked with the team to develop modern websites and apps for various different uses. I was also trained in both front end and back end systems for web development. I learned how to optimize pages for better load speeds and better rankings for search engine optimization. One of the more notable projects we had was working with Robot Framework, a Python extension, to automate web page testing. All the while doing all this, I also learned how to apply agile software development techniques in a dev team.</p>
+					<p>I am currently a junior, anticipated to graduate in May, 2019. I started off my first year in college majoring in Economics. I had the privilege to enroll in some interesting courses in the department, such as Sports Economics, where we tested out various economic theories in a sports setting, and Econometrics where students are taught how to use the tools that enable us to extract useful information about important economic policy from a set of available data.</p>
+					<p>I also decided to major in Computer Science after taking a few computer science courses that seemed interesting to me. Because of this, towards the end of my college “career”, I’m taking mostly CS courses. However, this semester in particular will be very interesting as I’m also enrolled in a dance class and an art class. I'm excited for this chance to branch out and obtain new experiences before I graduate.</p>
 
-		<h2>Miscellaneous</h2>
-		<p>I'm involved in some extra-curricular activities such as Alpha Kappa Psi, the professional business fraternity; and Grass Roots Soccer, a health organization that uses the power of soccer to educate, inspire, and mobilize young people to lead healthier lives. These two organizations have helped me develop so much as a student, where Alpha Kappa Psi has helped me develop my professional skills tremendously, and Grass Roots Soccer has given me a great opportunity to give back to the community.</p>
-		<p>I enjoy painting in my free time. I took up painting a few years ago, teaching myself different painting techniques on various mediums. I mostly do nature scenes and landscapes. Attempting these types of paintings tend to help relax and find solace in the quiet and solidarity I find while painting.</p>
-		<p>However, when I’m looking for a change of pace, I usually go play basketball. It’s one of the few sports that I find very enjoyable, not just to watch, but also play. I started playing basketball in middle school, and have enjoyed playing it ever since.</p>
-	
-	</div>	
-		
+					<h2>Experience</h2>
+					<p>I currently work for IT Services on campus, working as an IT Consultant. Here, I assist with network registration and troubleshoot network issues, troubleshoot NetID and login issues, provide support through various methods,assist with various types of malware on students' personal computers. I’d say that the most interesting experience while working here are the night-owl shifts, where I work at the help desk, doing the exact same thing an IT Consultant would normally do, except at the late hours of midnight to 8 am.</p>
+
+					<p>Other than that, last summer I had the chance to work for Media Prima Digital, a multimedia company based in Malaysia. There, I was an intern working as a developer that worked on web & app development. Here, I worked with the team to develop modern websites and apps for various different uses. I was also trained in both front end and back end systems for web development. I learned how to optimize pages for better load speeds and better rankings for search engine optimization. One of the more notable projects we had was working with Robot Framework, a Python extension, to automate web page testing. All the while doing all this, I also learned how to apply agile software development techniques in a dev team.</p>
+
+					<h2>Miscellaneous</h2>
+					<p>I'm involved in some extra-curricular activities such as Alpha Kappa Psi, the professional business fraternity; and Grass Roots Soccer, a health organization that uses the power of soccer to educate, inspire, and mobilize young people to lead healthier lives. These two organizations have helped me develop so much as a student, where Alpha Kappa Psi has helped me develop my professional skills tremendously, and Grass Roots Soccer has given me a great opportunity to give back to the community.</p>
+					<p>I enjoy painting in my free time. I took up painting a few years ago, teaching myself different painting techniques on various mediums. I mostly do nature scenes and landscapes. Attempting these types of paintings tend to help relax and find solace in the quiet and solidarity I find while painting.</p>
+					<p>However, when I’m looking for a change of pace, I usually go play basketball. It’s one of the few sports that I find very enjoyable, not just to watch, but also play. I started playing basketball in middle school, and have enjoyed playing it ever since.</p>
+				</div>
+			</div>
+		</div>
+
 	</div><!--.container-->
 
 
